Fix bibtex text alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -404,6 +404,9 @@
         text-align: right;
         font-size: 12px;
         word-spacing: 7px;
+        .bibtex {
+            text-align: left;
+        }
     }
 }
 
